--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "venus_py_tools"
-version = "0.0.6"
+name = "venus-py-tools"
+version = "0.0.7"
 authors = [
-  { name="Angelo Burtot", email="542685010@qq.com" },
+  { name="AngeloBurt", email="542685010@qq.com" },
 ]
-description = "A small example package"
+description = "Python package for personal development"
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
@@ -18,5 +18,5 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/pypa/sampleproject"
-"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
+"Homepage" = "https://github.com/AngeloBurt/packaging-py-develop-venus"
+"Bug Tracker" = "https://github.com/AngeloBurt/packaging-py-develop-venus/issues"
