--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "venus-py-tools"
-version = "0.0.7"
+name = "PyAase"
+version = "0.0.2"
 authors = [
   { name="AngeloBurt", email="542685010@qq.com" },
 ]
