--- a/requirements.txt
+++ b/requirements.txt
@@ -89,6 +89,7 @@ prompt-toolkit==3.0.36
 Protego==0.1.16
 psutil==5.9.0
 pure-eval==0.2.2
+PyAase==0.0.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.10.0
@@ -148,7 +149,6 @@ typing-extensions==3.10.0.2
 tzdata==2021.5
 tzlocal==4.1
 urllib3==1.26.7
-venus_py_tools==0.0.4
 virtualenv==20.14.1
 virtualenvwrapper-win==1.2.7
 w3lib==1.22.0
